# big-prime-numbers

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
src/: common.h  common.hpp  except.cpp  except.h  jacobi.hpp  lucas_sequence.cpp  lucas_sequence.h  random.hpp  sieve_eratosthenes.cpp  sieve_eratosthenes.h
src/factorization/: dixon_factorization.cpp  dixon_factorization.h  factorization_utils.cpp  factorization_utils.h  factorization_utils.hpp  factorizer_interface.hpp  fermat_factorization.cpp  fermat_factorization.h  pollard_p1_factorization.hpp  pollard_rho_factorization.hpp  trial_factorization.cpp  trial_factorization.h
src/primality_tests/: bpsw_test.cpp  bpsw_test.h  fermat_test.hpp  lucas_lehmer_riesel_test.cpp  lucas_lehmer_riesel_test.h  lucas_lehmer_riesel_test.hpp  lucas_lehmer_test.cpp  lucas_lehmer_test.h  lucas_lehmer_test.hpp  lucas_test.cpp  lucas_test.h  lucas_test.hpp  miller_rabin_prime_test.hpp  miller_rabin_test.hpp  primality_status.cpp  primality_status.h  primality_utils.cpp  primality_utils.h  primality_utils.hpp  prime_tester_interface.hpp  proth_test.hpp  trial_test.cpp  trial_test.h  trial_test.hpp
src/prime_generators/: iterative_search.hpp  maurer_certificate.cpp  maurer_certificate.h  maurer_method.hpp
tests/: CMakeLists.txt  big_validator.hpp  small_validator.hpp  test_utils.cpp  test_utils.h  validate_factorization.cpp  validate_primality_tests.cpp  validate_prime_generators.cpp  validate_random.cpp
tests/benchmarks/: CMakeLists.txt  benchmarks.cpp
tests/data/: carmichael_less_10000th_prime.txt  mersenne_primes.txt  random_big_generalized_mersenne_primes.txt  random_big_primes.txt  random_big_proth_primes.txt  random_big_semiprimes.txt  random_very_big_primes.txt
tests/test/: CMakeLists.txt  validate_factorization.cpp  validate_primality_tests.cpp  validate_prime_generators.cpp  validate_random.cpp
